<resources>
    <string name="app_name">whatsApp</string>
    <string name="entrar_apresentacao">Cadastre seu numero abaixo\nconverse hoje mesmo</string>
    <string name="email_acesso">E-mail</string>
    <string name="senha_acesso">Senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="ir_cadastrar">Não tem conta? Cadastre-se</string>
    <string name="nome_acesso">Usuário</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
